[gd_scene load_steps=2 format=2]

[ext_resource path="res://Main.gd" type="Script" id=4]

[node name="Main" type="Node2D"]
script = ExtResource( 4 )

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, 48.6632 )

[node name="Position2D2" type="Position2D" parent="."]
position = Vector2( 1.49829, 484.671 )

[node name="Position2D4" type="Position2D" parent="."]
position = Vector2( 472.533, 48.6632 )

[node name="Position2D3" type="Position2D" parent="."]
position = Vector2( 474.031, 484.671 )
